--- a/README
+++ b/README
@@ -2,6 +2,8 @@ netcf
 
 This is the netcf module.
 
+It requires [the netcf Ruby bindings](https://github.com/twpayne/netcf-ruby)
+
 License
 -------
 
